[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-cmcc-iptv-source-checker"
version = "0.2.0"
description = "IPTV source inspector with stream metadata, logo/frame checks, and player launchers"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
authors = [{ name = "HA-CMCC-IPTV contributors" }]
dependencies = []

[project.gui-scripts]
iptv-source-checker = "iptv_source_checker.app:main"

[project.scripts]
iptv-logo-reviewer = "iptv_source_checker.review_server:main"
iptv-sort-quality = "iptv_source_checker.quality_sort:main"

[dependency-groups]
dev = [
  "mypy>=1.17",
  "pytest>=8.4",
  "ruff>=0.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
